# wonderbuild

./: .gitignore  .travis.yml  AUTHORS  README  __init__.py  __main__.py  check_policy  subprocess_wrapper.py
.github/workflows/: main.yml
PsyClean/: PsyClean.dsp  PsyClean.dsw
Psycle/: Psycle.dsp  Psycle.dsw
Psycle/FoobarPlugin/: foo_psy.dsp  foo_psy.dsw
Psycle/PortAudioStaticASIO/: PortAudioStaticASIO.dsp
Psycle/WinampPlugin/: Psycle Winamp Plugin.dsp  Psycle Winamp Plugin.dsw  Winamp3 Plugin.dsp  WinampPlugin.dsp
Psycle/pluginssrc/: Psycle Plugins.dsw
benchmarks/: time.xml  time.xsl
benchmarks/derived-from-gamesfromwithin.com/: .gitignore  .rsync-filter  gen-bench  run-bench
bohan/cross-compilation/: llvm.build.sh
build-systems/: microsoft-dll-collector  wonderbuild.py  wonderbuild_script.py  wonderbuild_script_common.py
buildbot/: README  hg_watcher.py  master.cfg  svn_watcher--psycle  svn_watcher--sondar  svn_watcher.py
cross-compilation/: .rsync-filter  llvm.build.sh
cxx_tool_chain/: _build_cfg.py  _mod.py
debian/: changelog  control  libdiversalis1-dev.install  libpsycle-audiodrivers1-dev.install  libpsycle-audiodrivers1.install  libpsycle-core1-dev.install  libpsycle-core1.install  libpsycle-helpers-math1-dev.install  libpsycle-helpers1-dev.install  libpsycle-helpers1.install  libpsycle-plugin-interface1-dev.install  libpsycle-plugins1.install  libuniversalis1-dev.install  libuniversalis1.install  psycle-player1.install  rules
diversalis/: configure.ac  wonderbuild_script.py
external-packages/: build_boost.cmd
freepsycle/: .cdtproject  .project  wonderbuild_script.py
iphone_cross_pkg/: build.sh
mingw_cross_pkg/: README  TODO  mingw-cross-pkg  mingw_cross_pkg.py
ngrs/: Makefile.am  autotools.bootstrap  configure.ac
ngrs/make/msvc7.1/: win_ngrs.vcproj
ngrs/src/: Makefile.am
packageneric/: TODO  colorgcc  packageneric.py  scons
packageneric/generic/detail/autotools/autoconf/: after-libtool.ac  autoconf.ac  automake.ac  c++.ac  configure.ac  defines.ac  gnu-compiler-and-linker-flags.ac  init.ac  libtool.ac  options.ac  paths.ac  pkgconfig.ac  python.ac  recall.ac
packageneric/generic/detail/autotools/autoconf/m4/autoconf-archive/: ac_prefix_config_h.m4
packageneric/generic/detail/autotools/autoconf/m4/packageneric/: ax_prefix_config_h.modified.m4  miscellaneous.m4  module.m4  option.m4
packageneric/generic/detail/autotools/autoconf/sh/: main.sh
psycle/: asio.msvc-2008.vcproj  psycle-foobar-plugin-foo_psy.msvc-2005.vcproj  psycle-foobar-plugin-foo_psy.msvc-2008.vcproj  psycle-msvc-2008.vcproj  psycle-winamp-plugin-in_psycle.msvc-2005.vcproj  psycle-winamp-plugin-in_psycle.msvc-2008.vcproj  psycle-winamp-plugin-in_psycle_lng.msvc-2005.vcproj  psycle-winamp-plugin-in_psycle_lng.msvc-2008.vcproj  psycle.msvc-2005.vcproj  psycle.msvc-2008.vcproj
psycle-audiodrivers/: .cproject  .project  asio.msvc-2005.vcproj  asio.msvc-2008.vcproj  psycle-audiodrivers.msvc-2005.vcproj  psycle-audiodrivers.msvc-2008.vcproj  qmake.pro  wonderbuild_script.py
psycle-core/: .cproject  .project  psycle-core.msvc-2005.vcproj  psycle-core.msvc-2008.vcproj  qmake.pro  wonderbuild_script.py
psycle-helpers/: .cproject  .project  psycle-helpers-unit-tests.msvc-2005.vcproj  psycle-helpers-unit-tests.msvc-2008.vcproj  psycle-helpers.msvc-2005.vcproj  psycle-helpers.msvc-2008.vcproj  wonderbuild_script.py
psycle-player/: .cproject  .project  psycle-player.msvc-2005.vcproj  psycle-player.msvc-2008.vcproj  wonderbuild_script.py
psycle-plugins/: wonderbuild_script.py
psycle2_multisequence/: Psycle.dsw  Psycle.vcproj
qpsycle/: .cproject  .project  qmake.pro
std_checks/: _auto_link.py  _clang.py  _valid_cfg.py  openmp.py
tests/: llvm.build.sh
tools/: check_policy
trunk/: AUTHORS
unit-tests/: wonderbuild_script.py
universalis/: .cproject  .project  autotools.bootstrap  qmake.pro  universalis-unit-tests.msvc-2005.vcproj  universalis-unit-tests.msvc-2008.vcproj  universalis.msvc-2005.vcproj  universalis.msvc-2008.vcproj  wonderbuild_script.py  wonderbuild_script2.py
wonderbuild/: README  TODO  __init__.py  chain.py  cpp_include_scanner.py  cxx_chain.py  cxx_include_scanner.py  fhs.py  filesystem.py  logger.py  main.py  options.py  project.py  scheduler.py  signature.py  subprocess_wrapper.py  task.py  waf.timestamp.patch  wonderbuild  wonderbuild.py  wonderbuild_no_yield.py  wonderbuild_yield.py
wonderbuild/benchmarks/: .rsync-filter  Makefile.am  attr.py  configure.ac  gen-bench  gen-bench.default  genbench.default  genbench.py  pickle_benchmark.py  pickle_benchmark.results  profile-wonderbuild-initial-build  profile-wonderbuild-no-op-build  run-bench  time-autotools  time-autotools-0  time-make  time-make-0  time-scons  time-scons-0  time-waf  time-waf-0  time-wonderbuild  time-wonderbuild-0  time.css  time.xml  time.xsl  wonderbuild.py  wonderbuild_script.py  wonderbuild_script_footer.py  wonderbuild_script_header.py  wrap-dev-null
wonderbuild/benchmarks/derived-from-gamesfromwithin.com/: .rsync-filter  gen-bench.default  run-bench
wonderbuild/benchmarks/good-makefiles/: Makefile
wonderbuild/benchmarks/lib-dep-stress/: wonderbuild_script.py  wscript
wonderbuild/benchmarks/makefile-technics/: Makefile
wonderbuild/benchmarks/misc/: file_timestamp_stress_test.py  gen-bench.pollute  property.py  subprocess_stress_test.py
wonderbuild/benchmarks/misc/lib-dep-stress/: generate-src  wonderbuild_script.py  wscript
wonderbuild/benchmarks/misc/lib-dependency-stress/: generate-src  wonderbuild_script.py  wscript
wonderbuild/benchmarks/misc/stat/: stat.cpp  stat.py
wonderbuild/benchmarks/other-build-tools/: waf-timestamp.patch
wonderbuild/benchmarks/python-tests/pickle-speed/: results
wonderbuild/benchmarks/python-tests/stat-speed/: stat.py
xpsycle/: Makefile.am  autotools.bootstrap  configure.ac
xpsycle.plugins/: Makefile.am  autotools.boostrap
xpsycle/debian/: README
xpsycle/doc/: Makefile.am
xpsycle/make/msvc7.1/: xpsycle_win.sln  xpsycle_win.vcproj
xpsycle/pixmaps/: Makefile.am
xpsycle/src/: Makefile.am
(+2555 files in other folders)
