AC_INIT([bench], [1.0.0])
AC_CONFIG_SRCDIR([configure.ac])
AC_CONFIG_AUX_DIR([autotools-aux])
AC_CONFIG_MACRO_DIR([autotools-macro])
LT_INIT([disable-shared])
LT_LANG[C++])
#AM_PROG_CC_C_O
AM_INIT_AUTOMAKE([subdir-objects no-define tar-pax dist-bzip2 color-tests])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
